--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100328481-1"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8PPB989KGD"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
-		gtag('config', 'UA-100328481-1');
+		gtag('config', 'G-8PPB989KGD');
 	</script>
 
 	<meta charset="utf-8">
@@ -16,7 +16,7 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.19/lodash.min.js" integrity="sha256-Jvh9+A4HNbbWsWl1Dw7kAzNsU3y8elGIjLnUSUNMtLg=" crossorigin="anonymous"></script>
 
-	<meta name="description" content="Ryan Mok. Software development and product management. Systems Design Engineering student at the University of Waterloo.">
+	<meta name="description" content="Ryan Mok. Backend software engineer passionate about shipping amazing products, together.">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -63,8 +63,8 @@
 				<div class="row align-items-center h-95">
 					<div class="col">
 						<h1 id="hello">hello, i'm ryan</h1>
-						<h2 id="like" class="pt-5">Things I 👍: developing software, managing products.</h2>
-						<h2 id="love" class="pt-2">Things I ❤️: making amazing software products, together.</h2>
+						<h2 id="like" class="pt-5">Things I 👍: engineering backend software.</h2>
+						<h2 id="love" class="pt-2">Things I ❤️: building amazing products, together.</h2>
 					</div>
 				</div>
 				<div class="row align-items-end h-5">
@@ -80,7 +80,7 @@
 				<div class="row align-items-center text-center h-100">
 					<div class="col">
 						<h3 class="pb-5">what i've done</h3>
-						<p class="pb-md-2">Developed backend software at <a class="text-info" href="https://www.paywithextend.com/" target="_blank" onclick="this.blur()">Extend</a> to manage digitally distributed virtual credit cards.</p>
+						<p class="pb-md-2">Currently developing backend software at <a class="text-info" href="https://www.paywithextend.com/" target="_blank" onclick="this.blur()">Extend</a> to manage digitally distributed virtual credit cards.</p>
 						<p class="pb-md-2">Managed a product feature to bring <a class="text-info" href="https://www.splunk.com/" target="_blank" onclick="this.blur()">Splunk</a> Mobile to devices running device management software.</p>
 						<p class="pb-md-2">Developed enhancements for the deployment of <a class="text-info" href="https://www.apple.com/" target="_blank" onclick="this.blur()">Apple</a> Maps data around the world.</p>
 						<p class="pb-md-2">Developed on an XP team at <a class="text-info" href="https://nulogy.com/" target="_blank" onclick="this.blur()">Nulogy</a> for a contract packaging & manufacturing platform.</p>
@@ -102,7 +102,7 @@
 								<p class="icon">📍</p>
 							</div>
 							<div class="col-10 col-sm-11">
-								<p>Currently in Waterloo. Previously in the Bay Area & Toronto.</p>
+								<p>Currently in Toronto. Previously in the Bay Area & Waterloo.</p>
 							</div>
 						</div>
 						<div class="row align-items-center">
@@ -110,7 +110,7 @@
 								<p class="icon">🎓</p>
 							</div>
 							<div class="col-10 col-sm-11">
-								<p>Graduating 2021. <a class="text-info" href="https://uwaterloo.ca/systems-design-engineering/" target="_blank" onclick="this.blur()">Systems Design Engineering</a>. University of Waterloo.</p>
+								<p>Graduated 2021. <a class="text-info" href="https://uwaterloo.ca/systems-design-engineering/" target="_blank" onclick="this.blur()">Systems Design Engineering</a>. University of Waterloo.</p>
 							</div>
 						</div>
 						<div class="row align-items-center">
